# writing

./: .editorconfig  .env.example  .gitignore  .prettierrc  .tool-versions  .vercelignore  .windsurfrules  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  GAMEPLAN.md  IMPROVEMENTS.md  LICENSE  MOCKING_GUIDE.md  Pipfile  README.md  REFACTORING.md  STRUCTURE.md  TEST_ORGANIZATION.md  config.yaml  index.md  next.config.js  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json  write
tools/: ARCHITECTURE.md  Cargo.toml  README-TEST-STANDARDIZATION.md  README.md  REFACTORING.md  TESTING_README.md  TEST_ORGANIZATION.md  TOOL_ISOLATION.md  coverage.sh  create_missing_tests.sh  install.sh  mutation.sh  optimize-tests.sh  standardize_tests.sh  standardize_tests_test.sh
tools/benchmark-analyze/: Cargo.toml  README.md
tools/benchmark-analyze/src/: lib.rs  main.rs
tools/benchmark-analyze/tests/: mod.rs
tools/benchmark-analyze/tests/integration/: mod.rs
tools/benchmark-analyze/tests/property/: mod.rs
tools/benchmark-analyze/tests/unit/: mod.rs  tests_tests.rs
tools/common/: README.md
tools/common/cli/: Cargo.toml
tools/common/cli/src/: args.rs  lib.rs
tools/common/complexity/: Cargo.toml
tools/common/complexity/src/: lib.rs
tools/common/config/: Cargo.toml
tools/common/config/src/: cache.rs  lib.rs  views.rs
tools/common/config/tests/: mod.rs
tools/common/errors/: Cargo.toml  README.md
tools/common/errors/src/: category.rs  context.rs  error_formatter.rs  lib.rs  macros.rs  reporting.rs  validation.rs
tools/common/errors/tests/: helpers.rs  mod.rs
tools/common/fs/: Cargo.toml  README.md
tools/common/fs/src/: cleanup.rs  content_path.rs  directory.rs  file.rs  lib.rs  macros.rs  normalize.rs
tools/common/fs/tests/: directory_operations_tests.rs  file_operations_tests.rs  mod.rs
tools/common/macros/: Cargo.toml
tools/common/macros/src/: lib.rs
tools/common/markdown/: Cargo.toml
tools/common/markdown/src/: lib.rs
tools/common/markdown/tests/: mod.rs
tools/common/models/: Cargo.toml
tools/common/models/src/: lib.rs  tests.rs
tools/common/models/tests/: mod.rs
tools/common/templates/: Cargo.toml
tools/common/templates/module_template/: errors.rs  impl_.rs  mod.rs  models.rs
tools/common/templates/src/: lib.rs
tools/common/test_utils/: Cargo.toml
tools/common/test_utils/examples/: mock_examples.rs  mock_test_patterns.rs  property_tests.rs  test_fixture.rs  test_organization.rs
tools/common/test_utils/src/: assertions.rs  fixtures.rs  lib.rs  macros.rs  proptest.rs  test_environment.rs
tools/common/test_utils/tests/: mock_test.rs
tools/common/traits/: Cargo.toml
tools/common/traits/src/: lib.rs  tools.rs
tools/common/utils/: Cargo.toml  README.md
tools/common/utils/src/: lib.rs  pattern.rs  process.rs  time.rs  ui.rs
tools/common/validation/: Cargo.toml  README.md
tools/content-build/: Cargo.toml  README.md
tools/content-build/src/: lib.rs  main.rs
tools/content-build/tests/: mod.rs
tools/content-delete/: Cargo.toml  README.md
tools/content-delete/src/: lib.rs  main.rs
tools/content-delete/tests/: integration_test.rs  mod.rs
tools/content-edit/: Cargo.toml  README.md  test-post.md
tools/content-edit/src/: cli_utils.rs  lib.rs  lib.rs.bak  main.rs  tests.rs
tools/content-edit/tests/: integration_test.rs  mod.rs
tools/content-import/: Cargo.toml
tools/content-import/src/: main.rs
tools/content-migrate/: Cargo.toml
tools/content-migrate/src/: main.rs  migrate.rs
tools/content-move/: Cargo.toml  README.md
tools/content-move/src/: lib.rs  main.rs
tools/content-move/tests/: mod.rs
tools/content-new/: Cargo.toml  README.md
tools/content-new/src/: lib.rs  lib.rs.bak  main.rs
tools/content-new/templates/: article.md  note.md  tutorial.md
tools/content-new/tests/: integration_test.rs  mod.rs
tools/content-search/: Cargo.toml  README.md
tools/content-search/src/: lib.rs
tools/content-search/tests/: mod.rs
tools/content-stats/: Cargo.toml  README.md
tools/content-stats/src/: lib.rs  main.rs
tools/content-stats/tests/: mod.rs
tools/content-template/: Cargo.toml  README.md
tools/content-template/src/: lib.rs
tools/content-template/tests/: mod.rs
tools/content-validate/: Cargo.toml  README.md
tools/content-validate/data/: frequency_dictionary_en_82_765.txt
tools/content-validate/src/: lib.rs
tools/content-validate/tests/: integration_tests.rs  mod.rs  property_tests.proptest-regressions  property_tests.rs  unit_tests.rs
tools/image-build/: Cargo.toml  README.md
tools/image-build/benches/: advanced_scenarios.rs  build_processing.rs
tools/image-build/src/: lib.rs  main.rs  tests.rs
tools/image-build/tests/: mod.rs
tools/image-optimize/: Cargo.toml  README.md
tools/image-optimize/benches/: advanced_scenarios.rs  image_processing.rs
tools/image-optimize/src/: lib.rs  main.rs  tests.rs
tools/image-optimize/tests/: mod.rs
tools/llms-generate/: Cargo.toml  README.md
tools/llms-generate/src/: lib.rs  main.rs
tools/llms-generate/tests/: mod.rs
tools/toc-generate/: Cargo.toml  README.md
tools/toc-generate/src/: lib.rs  main.rs
tools/toc-generate/tests/: mod.rs
tools/tools/tests/: mod.rs
tools/topic-add/: Cargo.toml  README.md  config.yaml
tools/topic-add/src/: lib.rs  main.rs
tools/topic-add/tests/: mod.rs
tools/topic-delete/: Cargo.toml  README.md
tools/topic-delete/src/: lib.rs  main.rs
tools/topic-delete/tests/: mod.rs
tools/topic-edit/: Cargo.toml  README.md
tools/topic-edit/src/: lib.rs  main.rs
tools/topic-edit/tests/: mod.rs
tools/topic-rename/: Cargo.toml  README.md
tools/topic-rename/src/: lib.rs  main.rs
tools/topic-rename/tests/: mod.rs
tools/write/: Cargo.toml  README.md
tools/write/benches/: performance_benchmarks.rs
tools/write/src/: benchmark.rs  cli.rs  config.rs  debug_test.rs  lib.rs  main.rs  tools.rs  ui.rs
tools/write/tests/: build_tests.rs  content_tests.rs  error_handling_tests.rs  image_tests.rs  mod.rs  stats_tests.rs  topic_tests.rs
(+414 files in other folders)
