[workspace]
resolver = "2"
members = [
    "common/models",
    "common/config",
    "common/fs",
    "common/markdown",
    "common/errors",
    "common/test_utils",
    "common/templates",
    "content-new",
    "content-edit",
    "content-move",
    "content-delete",
    "content-stats",
    "content-build",
    "image-build",
    "image-optimize",
    "llms-generate",
    "toc-generate",
    "topic-add",
    "topic-edit",
    "topic-rename",
    "topic-delete",
    "write"
]

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
walkdir = "2.3"
colored = "2.0"
slug = "0.1"
chrono = "0.4"
image = "0.24"
comrak = "0.18"
regex = "1.11"
dialoguer = "0.11"
ravif = "0.11.1"
markdown = "1.0"
pulldown-cmark = "0.9"
handlebars = "4.3"
fs_extra = "1.3"
rss = "2.0"
quick-xml = { version = "0.30", features = ["serialize"] }
tempfile = "3.8" 
