[workspace]
resolver = "2"
members = [
    "common/cli",
    "common/config",
    "common/errors",
    "common/fs",
    "common/markdown",
    "common/models",
    "common/test_utils",
    "common/validation",
    "content-edit",
    "content-new",
    "content-move",
    "content-delete",
    "content-stats",
    "content-build",
    "image-build",
    "image-optimize",
    "llms-generate",
    "toc-generate",
    "topic-add",
    "topic-edit",
    "topic-rename",
    "topic-delete",
    "write",
    "content-template",
    "content-validate",
    "content-search"
, "benchmark-analyze"]

[workspace.dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
comrak = { version = "0.18" }
dialoguer = "0.11.0"
dirs = "5.0.1"
image = { version = "0.24" }
markdown = { version = "1.0" }
pulldown-cmark = { version = "0.9" }
quick-xml = { version = "0.30", features = ["serialize"] }
ravif = { version = "0.11.1" }
regex = "1.10.2"
rss = { version = "2.0" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
slug = "0.1.4"
tempfile = "3.8"
thiserror = "1.0.49"
walkdir = "2.3"
fs_extra = "1.3"
handlebars = "4.3"
once_cell = "1.18.0"
# Testing dependencies
proptest = "1.3.1"
mockall = "0.12.1"
cargo-llvm-cov = "0.5.39"
cargo-nextest = "0.9.67"
rand = "0.8.5"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Evan Sims <hello@evansims.com>"]
description = "Writing tools for managing content"
license = "MIT"
# Default features for workspace members
# Feature flag definitions

# Nextest configuration
[profile.ci]
inherits = "test"
fail-fast = true
retries = 1
test-threads = "num-cpus"
status-level = "all"
final-status-level = "all"
failure-output = "immediate-final"
success-output = "never"

[profile.coverage]
inherits = "test"
fail-fast = false
retries = 0
test-threads = "num-cpus"
status-level = "all"
final-status-level = "all"
failure-output = "immediate"
success-output = "never"

[profile.local]
inherits = "test"
fail-fast = false
retries = 0
test-threads = "num-cpus"
status-level = "fail"
final-status-level = "fail"
failure-output = "immediate"
success-output = "immediate"
