[package]
name = "content-build"
version = "0.1.0"
edition = "2021"
description = "Tool for building content into static files (JSON, HTML, RSS, sitemap)"

[lib]
name = "content_build"
path = "src/lib.rs"

[[bin]]
name = "content-build"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
colored.workspace = true
walkdir.workspace = true
pulldown-cmark.workspace = true
handlebars.workspace = true
chrono.workspace = true
fs_extra.workspace = true
rss = "2.0"
quick-xml = { version = "0.30", features = ["serialize"] }
regex = "1.10.2"
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-markdown = { path = "../common/markdown" }

[dev-dependencies]
tempfile.workspace = true 