[package]
name = "content-delete"
version = "0.1.0"
edition = "2021"
description = "Tool for deleting content"

[lib]
name = "content_delete"
path = "src/lib.rs"

[[bin]]
name = "content-delete"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
colored.workspace = true
walkdir.workspace = true
dialoguer.workspace = true
fs_extra.workspace = true
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs", features = ["content", "find"] }
common-markdown = { path = "../common/markdown" }
common-errors = { path = "../common/errors" }
common-cli = { path = "../common/cli" }

[dev-dependencies]
tempfile.workspace = true
common-test-utils = { path = "../common/test_utils" } 