[package]
name = "content-edit"
version = "0.1.0"
edition = "2021"
description = "Tool for editing existing content"

[lib]
name = "content_edit"
path = "src/lib.rs"

[[bin]]
name = "content-edit"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
colored.workspace = true
walkdir.workspace = true
dialoguer.workspace = true
fs_extra.workspace = true
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-markdown = { path = "../common/markdown" } 