[package]
name = "content-edit"
version = "0.1.0"
edition = "2021"
description = "Tool for editing existing content"

[lib]
name = "content_edit"
path = "src/lib.rs"

[[bin]]
name = "content-edit"
path = "src/main.rs"

[[bin]]
name = "standalone-tests"
path = "tests/standalone/standalone_tests.rs"

[[bin]]
name = "content-edit-cli"
path = "src/bin/simple_cli.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
colored = { workspace = true }
walkdir = { workspace = true }
dialoguer = { workspace = true }
fs_extra = { workspace = true }
tempfile = { workspace = true }
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs", features = ["find"] }
common-markdown = { path = "../common/markdown" }
common-errors = { path = "../common/errors" }
common_traits = { path = "../common/traits" }
serde_json = { workspace = true }

[dev-dependencies]
common-test-utils = { path = "../common/test_utils" }
tempfile = "3.10.1"
copy_dir = "0.1.3"
proptest = { workspace = true }
mockall = { workspace = true }
