[package]
name = "content-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-errors = { path = "../common" }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18"
html2md = "0.2"
url = "2.5"
slug = "0.1"
dialoguer = "0.11"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
