[package]
name = "content-migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-models = { path = "../common/models" }
common-errors = { path = "../common/errors" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
