[package]
name = "content-move"
version = "0.1.0"
edition = "2021"
description = "Tool for moving content between topics and changing slugs"

[lib]
name = "content_move"
path = "src/lib.rs"

[[bin]]
name = "content-move"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
colored.workspace = true
walkdir.workspace = true
slug.workspace = true
dialoguer.workspace = true
fs_extra.workspace = true
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs", features = ["find"] }
common-markdown = { path = "../common/markdown" }

[dev-dependencies]
tempfile.workspace = true 