[package]
name = "content-stats"
version = "0.1.0"
edition = "2021"
description = "Tool for generating content statistics"

[lib]
name = "content_stats"
path = "src/lib.rs"

[[bin]]
name = "content-stats"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
colored.workspace = true
walkdir.workspace = true
comrak.workspace = true
regex.workspace = true
chrono.workspace = true
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-markdown = { path = "../common/markdown" } 