[package]
name = "content-template"
version = "0.1.0"
edition = "2021"
description = "Library and binary for managing content templates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-models = { path = "../common/models" }
common-errors = { path = "../common/errors" }
common-templates = { path = "../common/templates" }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[lib]
name = "content_template"
path = "src/lib.rs"

[[bin]]
name = "content-template"
path = "src/bin/main.rs"
