[package]
name = "image-build"
version = "0.1.0"
edition = "2021"
description = "Generate optimized images from source images for the build process"

[lib]
name = "image_build"
path = "src/lib.rs"

[[bin]]
name = "image-build"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
colored.workspace = true
image.workspace = true
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }

[dev-dependencies]
tempfile.workspace = true 