[package]
name = "image-build"
version = "0.1.0"
edition = "2021"
description = "Generate optimized images from source images for the build process"

[lib]
name = "image_build"
path = "src/lib.rs"

[[bin]]
name = "image-build"
path = "src/main.rs"

[features]
default = ["basic-formats"]
# Support for basic image formats (PNG, JPEG, GIF)
basic-formats = []
# Support for AVIF format
avif = []
# Support for additional formats can be added here in the future

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
colored.workspace = true
image.workspace = true
common-models = { path = "../common/models", features = ["images"] }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-errors = { path = "../common/errors" }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
rand = "0.8"
chrono = "0.4"

[[bench]]
name = "build_processing"
harness = false

[[bench]]
name = "advanced_scenarios"
harness = false