[package]
name = "image-optimize"
version = "0.1.0"
edition = "2021"
description = "Optimize images for an article"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
colored.workspace = true
image.workspace = true
ravif = "0.11.1"  # For AVIF encoding 