[package]
name = "topic-add"
version = "0.1.0"
edition = "2021"
description = "Add a new topic to the writing collection"

[lib]
name = "topic_add"
path = "src/lib.rs"

[[bin]]
name = "topic-add"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
colored.workspace = true
slug.workspace = true
dialoguer.workspace = true
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }

[dev-dependencies]
tempfile.workspace = true 