[package]
name = "topic-add"
version = "0.1.0"
edition = "2021"
description = "Add a new topic to the writing collection"

[lib]
name = "topic_add"
path = "src/lib.rs"

[[bin]]
name = "topic-add"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dialoguer = "0.11"
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-models = { path = "../common/models" }
common-errors = { path = "../common/errors" }
common-validation = { path = "../common/validation" }
common_traits = { path = "../common/traits" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
slug = "0.1"

[dev-dependencies]
common-test-utils = { path = "../common/test_utils" }
mockall = "0.12.1"
proptest = "1.4.0"
ctor = "0.2.6"
tempfile = "3.4"
serial_test = "3.2.0"
