[package]
name = "topic-add"
version = "0.1.0"
edition = "2021"
description = "Add a new topic to the writing collection"

[lib]
name = "topic_add"
path = "src/lib.rs"

[[bin]]
name = "topic-add"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dialoguer = "0.11"
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-models = { path = "../common/models" }
common-errors = { path = "../common/errors" }
common-validation = { path = "../common/validation" }
common_traits = { path = "../common/traits" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
slug = "0.1"

[dev-dependencies]
anyhow = "1.0"
common-test-utils = { path = "../common/test_utils" }
proptest = "1.0.0"
serial_test = "2.0.0"
temp-env = "0.3.1"
