[package]
name = "topic-delete"
version = "0.1.0"
edition = "2021"
description = "Delete a topic and migrate its content in the writing collection"

[lib]
name = "topic_delete"
path = "src/lib.rs"

[[bin]]
name = "topic-delete"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
colored.workspace = true
walkdir.workspace = true
dialoguer.workspace = true
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }

[dev-dependencies]
tempfile.workspace = true 