[package]
name = "topic-rename"
version = "0.1.0"
edition = "2021"
description = "Rename a topic and move its content in the writing collection"

[lib]
name = "topic_rename"
path = "src/lib.rs"

[[bin]]
name = "topic-rename"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
colored.workspace = true
slug.workspace = true
walkdir.workspace = true
dialoguer.workspace = true
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-errors = { path = "../common/errors" }

[dev-dependencies]
anyhow = "1.0"
common-test-utils = { path = "../common/test_utils" }
proptest = "1.0.0"
serial_test = "2.0.0"
temp-env = "0.3.1"