[package]
name = "write"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI for the writing management system"

[[bin]]
name = "writing"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }

# Non-workspace dependencies
console = "0.15"
similar = "2.2"
indicatif = "0.17"
tui = { package = "ratatui", version = "0.23" }
crossterm = "0.27"

# Common libraries
common-models = { path = "../common/models" }
common-config = { path = "../common/config" }
common-fs = { path = "../common/fs" }
common-markdown = { path = "../common/markdown" }
common-errors = { path = "../common/errors" }
common-templates = { path = "../common/templates" }

# Individual tool libraries
content-new = { path = "../content-new" }
content-move = { path = "../content-move" }
content-delete = { path = "../content-delete" }
content-edit = { path = "../content-edit" }
content-build = { path = "../content-build" }
content-stats = { path = "../content-stats" }
topic-add = { path = "../topic-add" }
topic-edit = { path = "../topic-edit" }
topic-rename = { path = "../topic-rename" }
topic-delete = { path = "../topic-delete" }
image-optimize = { path = "../image-optimize" }
image-build = { path = "../image-build" }
llms-generate = { path = "../llms-generate" }
toc-generate = { path = "../toc-generate" }

# Legacy tool binary dependencies - these will be replaced as they are refactored
