[package]
name = "write"
version = "0.1.0"
edition = "2021"
description = "Writing toolkit for managing content"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
colored = "2.0"
dialoguer = "0.10"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.6"
proptest = "1.2"
mockall = "0.11"
criterion = "0.5"
uuid = { version = "1.4", features = ["v4"] }

[lib]
name = "write"
path = "src/lib.rs"

[[bin]]
name = "write"
path = "src/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[features]
default = []
directory_ops = []
