[package]
name = "write"
version = "0.1.0"
edition = "2021"
description = "Writing toolkit for managing content"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dialoguer = "0.10"
indicatif = "0.17"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
common-errors = { path = "../common/errors" }
common-config = { path = "../common/config" }
common-models = { path = "../common/models" }
once_cell = "1.18"

[dev-dependencies]
tempfile = "3.8.0"
proptest = "1.2"
mockall = "0.11"
criterion = "0.5"
uuid = { version = "1.4", features = ["v4"] }

[lib]
name = "write"
path = "src/lib.rs"

[[bin]]
name = "write"
path = "src/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[features]
default = []
directory_ops = []
