[package]
name = "common-config"
version = "0.1.0"
edition = "2021"
description = "Configuration handling for the writing project"

[dependencies]
common-models = { path = "../models" }
common-errors = { path = "../errors" }
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true 