[package]
name = "common-config"
version = "0.1.0"
edition = "2021"
description = "Configuration handling for the writing project"

[dependencies]
common-models = { path = "../models" }
common-errors = { path = "../errors" }
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
once_cell.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
common-test-utils = { path = "../test_utils" }
mockall = "0.11.4"

[features]
default = ["cache"]
cache = []