[package]
name = "common-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde_yaml.workspace = true
anyhow.workspace = true
colored = "2.0.4"
walkdir = { workspace = true, optional = true }
fs_extra = { workspace = true, optional = true }

[features]
default = []
fs_extra = ["dep:fs_extra"]
walkdir = ["dep:walkdir"]
