[package]
name = "common-markdown"
version = "0.1.0"
edition = "2021"
description = "Markdown processing utilities for the writing project"

[dependencies]
common-models = { path = "../models" }
common-errors = { path = "../errors" }
anyhow.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true 